--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jews_harp
-description: A cross-platform mobile app for teaching jew's harp techniques.
+description: A mobile app for tutoring jew's harp techniques.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -23,7 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  # Firebase
+  firebase_core: ^0.5.2
+  firebase_auth: ^0.18.3
+  # SVG pictures
+  flutter_svg: ^0.19.1
+  # Business logic components
+  flutter_bloc: ^6.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,10 +50,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
