--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_svg: ^0.19.1
   # Business logic components
   flutter_bloc: ^6.1.1
+  # Optional data type
+  optional: ^5.0.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
