--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   optional: ^5.0.0+1
   # Service locator
   get_it: ^5.0.1
+  # Object value comparison
+  equatable: ^1.2.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
