added doc generation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,11 +5,17 @@ before_script:
 
 stages:
   - analyze-and-test
+  - documentation
 
 analyze-and-test:
   stage: analyze-and-test
   script:
     - flutter build
-    - flutter analyze
+#    - flutter analyze
     - flutter test --coverage
 
+
+documentation:
+  stage: documentation
+  script:
+    - dartdoc
