--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # Localization
+  flutter_localizations:
+    sdk: flutter
   # Firebase
   firebase_core: ^0.5.2
   firebase_auth: ^0.18.3
@@ -61,6 +64,7 @@ flutter:
 
   assets:
      - assets/images/
+     - assets/l10n/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
