--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  mockito: ^4.1.4
   injectable_generator:
   build_runner:
   flutter_test:
