test and analyze separated in gitlab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,15 @@ before_script:
   - flutter pub get
 
 stages:
-  - analyze-and-test
+  - analyze
+  - test
 
-analyze-and-test:
-  stage: analyze-and-test
+analyze:
+  stage: analyze
   script:
     - flutter analyze
+
+test:
+  stage: test
+  script:
     - flutter test --coverage
