added facebook aut

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   firebase_core: ^0.5.2
   firebase_auth: ^0.18.3
   # Facebook authentication
-  flutter_facebook_auth: ^2.0.2
+  flutter_facebook_login: ^3.0.0
   # Business logic components
   flutter_bloc: ^6.1.1
   # Optional data type
