--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Firebase
   firebase_core: ^0.5.2
   firebase_auth: ^0.18.3
+  # Google authentication
+  google_sign_in: ^4.5.9
   # Facebook authentication
   flutter_facebook_login: ^3.0.0
   # Business logic components
