--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   flutter_auth_buttons: ^0.10.0
+  convex_bottom_bar: ^2.7.1+1
 
 dev_dependencies:
   mockito: ^4.1.4
