--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   # Firebase
-  firebase_core: ^0.5.2
-  firebase_auth: ^0.18.3
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.20.1
+  # Cloud Firestore
+  cloud_firestore: ^0.16.0+1
   # Google authentication
   google_sign_in: ^4.5.9
   # Facebook authentication
