--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_auth_buttons: ^0.10.0
   convex_bottom_bar: ^2.7.1+1
+  font_awesome_flutter: ^8.11.0
 
 dev_dependencies:
   mockito: ^4.1.4
