--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,35 +27,32 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   # Firebase
-  firebase_core: ^0.7.0
-  firebase_auth: ^0.20.1
+  firebase_core: ^1.0.0
+  firebase_auth: ^1.0.0
   # Cloud Firestore
-  cloud_firestore: ^0.16.0+1
+  cloud_firestore: ^1.0.0
   # Google authentication
-  google_sign_in: ^4.5.9
+  google_sign_in: ^5.0.0
   # Facebook authentication
-  flutter_facebook_login: ^3.0.0
+  flutter_facebook_auth: ^3.0.0-nullsafety.0
   # Business logic components
-  flutter_bloc: ^6.1.1
-  # Optional data type
-  optional: ^5.0.0+1
+  flutter_bloc: ^7.0.0-nullsafety.3
   # Dependency injection
-  injectable: ^1.0.7
+  injectable: ^1.2.0
   # Service locator
-  get_it: ^5.0.1
+  get_it: ^6.0.0
   # Object value comparison
-  equatable: ^1.2.5
+  equatable: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  flutter_auth_buttons: ^0.10.0
-  convex_bottom_bar: ^2.7.1+1
+  cupertino_icons: ^1.0.2
+  convex_bottom_bar: ^3.0.0-nullsafety.0
   image_picker: ^0.7.2
 
 dev_dependencies:
-  mockito: ^4.1.4
+  mockito: ^5.0.0
   injectable_generator:
-  build_runner:
+  build_runner: ^1.11.5
   flutter_test:
     sdk: flutter
 
