--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   video_player: ^2.0.0
   # Keep the screen awake
   wakelock: ^0.5.0+2
+  # Spinner
+  flutter_spinkit: ^5.0.0
 
 dev_dependencies:
   mocktail: ^0.0.2-dev.2
