--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   wakelock: ^0.5.0+2
   # Spinner
   flutter_spinkit: ^5.0.0
+  # Functional programming
+  dartz: ^0.10.0-nullsafety.1
 
 dev_dependencies:
   mocktail: ^0.0.2-dev.2
