--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,8 @@ dependencies:
   wakelock: ^0.5.0+2
   # Spinner
   flutter_spinkit: ^5.0.0
-  # Functional programming
-  dartz: ^0.10.0-nullsafety.1
+  # Optional type
+  optional: ^6.0.0-nullsafety.0
 
 dev_dependencies:
   mocktail: ^0.0.2-dev.2
