--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   flutter_spinkit: ^5.0.0
   # Optional type
   optional: ^6.0.0-nullsafety.0
+  # Staggered grid list
+  flutter_staggered_grid_view: ^0.4.0-nullsafety.3
 
 dev_dependencies:
   mocktail: ^0.0.2-dev.2
