--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   optional: ^6.0.0-nullsafety.0
   # Staggered grid list
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
+  # random colors
+  random_color: ^1.0.6-nullsafety
 
 dev_dependencies:
   mocktail: ^0.1.1
