--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
   # random colors
   random_color: ^1.0.6-nullsafety
+  # Shimmer effect
+  shimmer: ^2.0.0-nullsafety.0
 
 dev_dependencies:
   mocktail: ^0.1.1
