--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   bottom_navy_bar: ^6.0.0-nullsafety.0
   # Animations
   animations: ^2.0.0
+  # Animations
+  cached_network_image: ^3.0.0-nullsafety
 
 dev_dependencies:
   mocktail: ^0.1.1
