--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,4 +61,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.github.AbedElazizShe:LightCompressor:0.9.0'
 }
