--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ dependencies:
   dio: ^4.0.0-prev3
   # In-app purchases
   in_app_purchase: ^0.5.1+1
+  # file compression
+  light_compressor: ^1.0.2
 
 dev_dependencies:
   mocktail: ^0.1.1
