--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ dependencies:
   in_app_purchase: ^0.5.1+1
   # file compression
   light_compressor: ^1.0.2
+  # Check internet connectivity
+  connectivity: ^3.0.3
 
 dev_dependencies:
   mocktail: ^0.1.1
