--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,10 +73,10 @@ dependencies:
   dio: ^4.0.0-prev3
   # In-app purchases
   in_app_purchase: ^0.5.2
-  # file compression
-  light_compressor: ^1.0.2
   # Check internet connectivity
   connectivity: ^3.0.3
+  # Video compression
+  video_compress: ^3.0.0
 
 dev_dependencies:
   mocktail: ^0.1.2
