--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,7 +1,7 @@
 analyzer:
   errors:
-    missing_required_param: warning
-    missing_return: warning
+    missing_required_param: error
+    missing_return: error
     todo: warning
     unnecessary_null_comparison: warning
 
