Update facebook ios auth conf

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -7,7 +7,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>fb{your-app-id}</string>
+          <string>fb745303249523049</string>
         </array>
       </dict>
     </array>
