--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires read and write permission from the user</string>
 	<key>CLIENT_ID</key>
 	<string>709047755574-ffq1lnkvpfns88eiof8slee8d00tirg5.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
